docs/samples/monthly-reports/versions/v3/monthly_2026-04_suzuki_report.md
---
title: 月次レポート（鈴木 謙吾・2026年3月対象）
period: "2026-03"
student_code: "73594"
student_name: "鈴木 謙吾"
report_kind: family_facing
report_revision: "v3.2"
---

# 月次学習レポート（2026年3月）

鈴木 謙吾 様  
保護者の皆様

いつもお子さまの学習にご理解とご協力を賜り、ありがとうございます。  
本書は、**2026年3月1日から3月31日**までの Physics（HL）指導の様子と、今後の見通しをご家庭にお届けするものです。

---

## 01 基本情報

| 項目 | 内容 |
|------|------|
| 生徒番号 | 73594 |
| お名前 | 鈴木 謙吾 様 |
| 担当教師 | 森田 大翔 |
| 担当CA | 藤井 |
| 指導科目 | Physics（HL） |
| ご志望の大学 | ミュンヘン工科大学（TUM） |
| 併願・関心校（学習計画表の記載） | カールスルーエ工科大学（KIT）、早稲田大学 理工学部（英語学位） |
| IB 合計スコア（目標） | 学習計画表の取得範囲では未確認（必要に応じて追記） |
| IB 合計スコア（現状） | mid semester 29/42、合計欄 29/42（学習計画表・2026年3月時点の記載） |
| Physics（HL）スコア（目標） | 学習計画表の取得範囲では未確認（必要に応じて追記） |
| Physics（HL）スコア（現状） | 5/7 |
| mock exam（時期） | 2027年1月（学習計画表の見出し） |
| final exam（時期） | 2027年5月（学習計画表の見出し） |
| 学校 end of exam（見出し） | 2026年5月末（学習計画表の見出し） |

---

## 02 塾での様子

Physics の授業は、**お子さまお一人あたり合計 75 分**の枠で実施しております。

単元の理解度については、**Topic B は高い水準で安定している一方**、**Topic A は「理解は進んでいるが、難易度の高い問題では演習量が成果につながりやすい」**という見立てです。春休みの授業では復習と予習の両方を組み合わせ、とくに Topic A に不安を感じやすいとの共有を踏まえ、**3月29日および4月5日の授業では A2・A3 の復習を中心**に進めてまいります（詳細な授業日と単元は **03（授業内容）の表** をご参照ください）。

| 観点 | 今月の学習状況と評価 | メモ（補足） |
|------|----------------------|--------------|
| 学習意欲 | 😊 良い | 当塾でおすすめしている練習サイトにも自主的に取り組まれています。 |
| 宿題の提出 | 😊 良い | おおよそ **7〜8 割程度の正答率**。無理に量を増やす必要はない形で調整しています。 |

---

## 03 授業内容（3月）

| 授業日 | 学習単元（英語表記） | 理解度 |
|--------|----------------------|--------|
| 2026/03/01 | B.5 Current and circuits 1 | ★★★ |
| 2026/03/08 | B.5 Current and circuits 2；B.5 Current and circuits 3 | ★★★ |
| 2026/03/15 | A.1 Kinematics 1〜2；B.1 Thermal energy transfers 1〜2；B.5 Current and circuits 1〜3 | ★★☆ |
| 2026/03/22 | A.1 Kinematics 1〜2；B.1 Thermal energy transfers 1〜2；B.5 Current and circuits 1〜3 | ★★☆ |
| 2026/03/29 | A.1 Kinematics 1〜2；A.2 Forces and momentum 1〜3；A.3 Work, energy and power 1〜3 | ★★☆ |

**理解度（★）の目安：**

- ★☆☆＝基礎内容の定着が必要  
- ★★☆＝基礎問題が解けるが応用問題に対応できない  
- ★★★＝基礎に加え応用問題にも対応できている  
- ※いずれも授業内の観察と演習の様子に基づきます。学習計画表に数値列がない場合は、担当の見立てで記載しています。

### 当塾からのコメント

春休み中の授業は、**復習を2回、予習を1回**のペースで進めることで合意しております。**4月12日の授業**では、Topic C1 の最初の部分の予習に入る予定です。

---

## 04 課題とアドバイス

**mock exam・final exam・学校 end of exam** の時期は **01 基本情報**をご覧ください。2026年3月実施の学校試験の詳細な日程・結果は、当レポート作成時点では特定できておりません。確定次第、ご連絡または次回レポートでお知らせします。

春休みに向けて、**当塾では Topic A の発展問題にも少しずつ慣れていくこと**を大切にしたいと考えております。謙吾さんには、基本の定着に加え、**ExamMate など試験に近い形式の問題**にも触れていただきたいです。無理のない範囲で演習のリズムを保っていただけると、授業との相乗効果がより出やすくなります。

---

## 05 学習の進捗（Physics HL）

03 と同じ期間について、**学校での進みと当塾での進み**を並べます（学習計画表の進捗列に基づく転記です）。

| 単元（授業で扱った範囲） | 学校での進み | 当塾での進み |
|--------------------------|--------------|--------------|
| 2026/03/01 — B.5 Current and circuits 1 | 済 | 済 |
| 2026/03/08 — B.5 Current and circuits 2〜3 | 済 | 済 |
| 2026/03/15 — A.1・B.1・B.5 各単元（表記省略） | 済 | 済 |
| 2026/03/22 — 同上の復習系 | 済 | 済 |
| 2026/03/29 — A.1・A.2・A.3 | 済 | 済 |

**進捗バー（HTML v3.2）**: 上表の**各行（週）ごと**に `calendar_buckets_10` — 対象月10区間のうち、その週の**03 当塾授業日**がある区間だけ青（[DATA_CONTRACT_05_学習の進捗.md](DATA_CONTRACT_05_学習の進捗.md) セクション3.1・トピック別）。学校日次は未取得のため灰。

謙吾さんのペースは計画とよく合っているように思います。Topic C に入るころは、**森田の授業の中で**理解の度合いに合わせて、改めて丁寧にご説明いたします。

---

## 07 今後の授業計画

| 予定日 | 内容（学習計画表に基づく） |
|--------|---------------------------|
| 2026/04/19 | C.1 Simple harmonic motion 1 |
| 2026/04/26 | C.1 Simple harmonic motion 2 |
| 2026/05/03 | C.2 Wave model, Wave phenomena 1 |
| 2026/05/10 | C.3 Wave phenomena 2；C.3 Wave phenomena 3（同日の予定列） |

### 今後の進め方・ご家庭へのお願い

- 学校のシラバスや今後の予定につきましては、**ご家庭へメールでご相談のうえ、学校の先生経由で入手できるか**確認いたします。  
- **三者面談の後**、進路や目標について担当CAの藤井がお伺いし、**森田先生と情報共有**いたします。

ご不明点やご心配な点がございましたら、いつでも担当までお声がけください。

---

## 【管理者・担当者向け】配布前チェック

<span style="color:#c0392b;font-weight:bold;">ご家庭へ送付する前に本節を削除するか、別ファイルに分けてください。</span>

- <span style="color:#c0392b;font-weight:bold;">本レポートの根拠の一部は、会議の自動要約（Gemini）です。配布前に音声・原記録と照合してください。</span>
- <span style="color:#c0392b;font-weight:bold;">MTG 記録では「Taiga Morita」との表記がありますが、本文では学習計画表に合わせ「森田 大翔」に統一しています（同一人物として扱う運用）。</span>
- <span style="color:#c0392b;font-weight:bold;">学習計画表の取得範囲では、IB 合計の「目標点」欄は確認できていません。必要ならスプレを追記取得してください。</span>
- <span style="color:#c0392b;font-weight:bold;">3月の学校試験の日程・得点は表からは特定できていません。MTG 要約に「B5・火曜実施・結果未出」の言及あり。日付確定後に本文（04）へ反映してください。</span>
- <span style="color:#c0392b;font-weight:bold;">学校試験の得点表記が「B1・B3・B4 で得点7」と「A7取得」で食い違うため、原資料で確定してからご家庭向け文面に反映してください。</span>
- <span style="color:#c0392b;font-weight:bold;">03 の理解度★は授業観察ベース。学習計画表に「理解度」列が無い場合は原資料と照合してください。</span>
- <span style="color:#c0392b;font-weight:bold;">「Review (practice test A.1-A3 )」行は授業日セルが一部空欄のため、3/29 に Review のみが実施されたかは断定不可。</span>
- <span style="color:#c0392b;font-weight:bold;">月次案の「ミスの種類と原因」は MTG 要約から抽出していません。</span>
- <span style="color:#c0392b;font-weight:bold;">Topic C 付近はスプレの空欄が多く、未実施と未入力の区別不可。</span>
